# mq-trace-lite

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: app.Dockerfile  docker-compose.yml  native-client.Dockerfile
docs/: docker-dev.md  local-ibm-mq.md  mq-rest-manual-test.md  mvp-scope.md  native-cli-docker.md  problem-statement.md  pymqi-install-notes.md  release-process.md  setup.md
docs/adr/: 0001-python-cli-first.md
docs/architecture/: future-dashboard.md  mq-native-browse.md  mq-native-docker.md  openshift-deployment-model.md  profile-model.md
mqtrace/: config.py
mqtrace/adapters/ibmmq/: client.py  native_client.py  rest_client.py
mqtrace/adapters/openshift/: discovery.py  k8s_client.py
mqtrace/cli/: inspect.py  main.py  profiles.py
mqtrace/core/: logger.py  messages.py
mqtrace/profiles/: loader.py  resolver.py
tests/unit/: test_cli_errors.py  test_messages.py  test_mq_native_client.py  test_mq_rest_client.py  test_openshift_discovery.py  test_profiles.py
